# DPD

./: .gitignore  CMakeLists.txt  DesignPatternDemo.sln  README.md
ConsoleLoggerHelper/: ConsoleLoggerHelper.cpp  ConsoleLoggerHelper.vcxproj  ConsoleLoggerHelper.vcxproj.filters  ReadMe.txt  stdafx.cpp
DesignPatternDemo/: Armor.cpp  Armor.h  ConsoleLogger.cpp  ConsoleLogger.h  Container.cpp  Container.h  DesignPatternDemo.cpp  DesignPatternDemo.vcxproj  DesignPatternDemo.vcxproj.filters  Display.cpp  Display.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  EquipSlot.cpp  EquipSlot.h  FSM.cpp  FSM.h  FileSystem.cpp  FileSystem.h  GUI.ini  GUIButton.cpp  GUIButton.h  GUIElement.cpp  GUIElement.h  GUIManager.cpp  GUIManager.h  GameCommandScreen.cpp  GameCommandScreen.h  GameCommandScreenAlt.cpp  GameCommandScreenAlt.h  GameLogic.cpp  GameLogic.h  GameLogicObjectInterface.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameObjectStats.h  (+82 more)
DesignPatternDemo/Log/: Log.h  LogTest.h  LogViewer.html  Template.xsl
DesignPatternDemo/src/Data/: ObjectDatabase.ini
DesignPatternDemo/src/Display/: Display.h
DesignPatternDemo/src/FSM/: FSM.h  State.cpp  StateCrouching.cpp  StateDead.h  StateUp.cpp
DesignPatternDemo/src/Factories/: GUIElementFactory.h  GameObjectFactory.h
DesignPatternDemo/src/FileSystem/: FileSystem.h
DesignPatternDemo/src/GUI/: GUIButton.h  GUIElement.cpp  GUIElement.h  MyGUIManager.cpp
DesignPatternDemo/src/GameObjects/: Armor.cpp  Armor.h  Container.h  Door.cpp  Enemy.h  GameObject.cpp  Obstacle.h  Tile.cpp
DesignPatternDemo/src/Input/: MyInputExample.cpp  MyInputExample.h
DesignPatternDemo/src/Interfaces/: ObjectEventInterface.h  ObjectModifierInterface.h
DesignPatternDemo/src/Items/: InventoryManager.cpp  Sword.cpp
DesignPatternDemo/src/Map/: MapManager.h
DesignPatternDemo/src/Utility/: IniParser.cpp
src/Data/: TestMap.ini  TestMap.txt  TestMap2.txt
src/Display/: Display.cpp  MyDisplayExample.h
src/FSM/: FSM.cpp  State.h  StateDead.cpp  StateUp.h
src/Factories/: GenericFactory.h
src/GUI/: GUIElement.h  GUIManager.cpp  GUIManager.h  MyGUIManager.h
src/GameLogic/: GameLogic.cpp  GameLogic.h  MyGameLogicExample.cpp  MyGameLogicExample.h
src/GameObjects/: Container.cpp  Enemy.cpp  GameObject.h  Obstacle.cpp  Player.h
src/Input/: Input.cpp  Input.h
src/Interfaces/: GameLogicObjectInterface.h  MapAreaInterface.h  ObjectCommandInterface.h
src/Items/: ObjectModifier.h
src/Map/: MapArea.cpp  MapArea.h  MapLoader.cpp  MapLoader.h  MyMapLoader.h
src/Utility/: Global.h  IniParser.cpp
